--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,26 +7,31 @@
 </ion-header>
 <ion-content padding id="page5">
   <form id="login-form1">
-    <ion-list id="login-list1">
-      <ion-item id="login-input1">
-        <ion-label>
-          Email
-        </ion-label>
-        <ion-input type="email" placeholder=""></ion-input>
-      </ion-item>
-      <ion-item id="login-input2">
-        <ion-label>
-          Password
-        </ion-label>
-        <ion-input type="password" placeholder=""></ion-input>
-      </ion-item>
-    </ion-list>
+
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-input type="number" placeholder=""></ion-input>
+        </ion-col>
+        <ion-col>
+          <ion-input type="number" placeholder=""></ion-input>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <button id="login-button1" ion-button color="primary" block on-click="goToMap()">
+          Ingresar
+        </button>
+      </ion-row>
+      <ion-row>
+        <button id="login-button2" ion-button clear color="light" block on-click="goToRegister()">
+          Registrate
+        </button>
+      </ion-row>
+    </ion-grid>
+
     <div class="spacer" style="height:40px;" id="login-spacer1"></div>
-    <button id="login-button1" ion-button color="stable" block on-click="goToSearchRoute()">
-      Log in
-    </button>
-    <button id="login-button2" ion-button clear color="positive" block href-inappbrowser="/signup">
-      Or create an account
-    </button>
+
+
   </form>
 </ion-content>
