--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -9,7 +9,5 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page2">
-  <div>
-    <img src="assets/img/eCm9CLSnmyCaZ38w55wA_Screenshot_3.png" style="display:block;width:auto;height:auto;margin-left:auto;margin-right:auto;" />
-  </div>
+  <div id="map"></div>
 </ion-content>
