search route style

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -30,12 +30,12 @@
       </ion-row>
       <ion-row>
         <button id="login-button1" ion-button color="light" block on-click="goToMap()">
-          Ingresar
+          Sign in
         </button>
       </ion-row>
       <ion-row>
-        <button id="login-button2" ion-button clear color="secondary" block on-click="goToRegister()">
-          Registrate
+        <button id="login-button2" ion-button clear color="secondary" block >
+          Sign up
         </button>
       </ion-row>
     </ion-grid>
