add profile data

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,10 +1,4 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Login
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+
 <ion-content padding id="page5">
 
   <form id="login-form1">
@@ -21,7 +15,7 @@
           </ion-select>
         </ion-col>
         <ion-col col-8>
-          <ion-input type="number" placeholder="Phone Number"></ion-input>
+          <ion-input type="number" placeholder="Numero Celular"></ion-input>
         </ion-col>
       </ion-row>
 
@@ -30,12 +24,12 @@
       </ion-row>
       <ion-row>
         <button id="login-button1" ion-button color="light" block on-click="goToMap()">
-          Sign in
+          Ingresar
         </button>
       </ion-row>
       <ion-row>
         <button id="login-button2" ion-button clear color="secondary" block >
-          Sign up
+          Registrate
         </button>
       </ion-row>
     </ion-grid>
