--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -4,7 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Map
+      Mapa
     </ion-title>
   </ion-navbar>
 </ion-header>
