--- a/src/pages/result-routes/result-routes.html
+++ b/src/pages/result-routes/result-routes.html
@@ -4,7 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Result Routes
+      Tus opciones
     </ion-title>
   </ion-navbar>
 </ion-header>
