--- a/src/pages/route-real-time/route-real-time.html
+++ b/src/pages/route-real-time/route-real-time.html
@@ -4,7 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Route Real Time
+      Ruta
     </ion-title>
   </ion-navbar>
 </ion-header>
