--- a/src/pages/tabs-controller/tabs-controller.html
+++ b/src/pages/tabs-controller/tabs-controller.html
@@ -1,5 +1,5 @@
 <ion-tabs id="tabsController-tabs1">
-  <ion-tab [root]="tab1Root" tabTitle="Map" tabIcon="map" id="tabsController-tab1"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Route" tabIcon="search" id="tabsController-tab2"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Report" tabIcon="information-circle" id="tabsController-tab3"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Mapa" tabIcon="map" id="tabsController-tab1"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Rutas" tabIcon="search" id="tabsController-tab2"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Reportar" tabIcon="information-circle" id="tabsController-tab3"></ion-tab>
 </ion-tabs>
