--- a/src/pages/search-route/search-route.html
+++ b/src/pages/search-route/search-route.html
@@ -31,11 +31,11 @@
 
     <ion-card *ngFor="let item of points">
       <ion-list>
-          <ion-item color="none" id="searchRoute-list-item26">
+          <ion-item id="searchRoute-list-item26">
             <ion-thumbnail item-left>
               <img src="assets/img/mZweDwSiOscr0gBpPxgY_Screenshot_1.png" />
             </ion-thumbnail>
-            <h2>
+            <h2 >
               {{item.title}}
             </h2>
           </ion-item>
