--- a/src/pages/search-route/search-route.html
+++ b/src/pages/search-route/search-route.html
@@ -24,8 +24,8 @@
     Buscar
   </button>
 
-  <div padding id="page3">
-    <h3 id="searchRoute-heading1" style="color:#000000;">
+  <div padding id="page3" style="background-color: #3c3b3b">
+    <h3 id="searchRoute-heading1" style="color:#fff;">
       Historial
     </h3>
 
