--- a/src/pages/route-real-time/route-real-time.html
+++ b/src/pages/route-real-time/route-real-time.html
@@ -12,27 +12,37 @@
   <div style="margin-left:-10px;width:calc(100% + 20px);">
     <img src="assets/img/lIwQnfTYqmDV1MR9ywog_Screenshot_4.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;" />
   </div>
-  <ion-card id="routeRealTime-card23">
+
+  <ion-card >
     <ion-list>
-      <ion-item color="none" id="routeRealTime-list-item21">
-        <ion-icon name="bicycle" item-left></ion-icon>
-        Item
+
+      <ion-item >
+        <ion-row *ngFor="let stepRoute of option.route">
+          <ion-col col-3>
+            <ion-icon name="{{stepRoute.begin}}"></ion-icon>
+          </ion-col>
+          <ion-col col-3>
+            <ion-icon name="arrow-round-forward"></ion-icon>
+          </ion-col>
+          <ion-col col-3>
+            <ion-icon name="{{stepRoute.end}}"></ion-icon>
+          </ion-col>
+          <ion-col col-3>
+            <p>HH:MM</p>
+          </ion-col>
+        </ion-row>
       </ion-item>
-      <div style="width:100%;height:220px;margin:0px 0px;line-height:250px;background-color:#e8ebef;text-align:center;">
-        <i class="icon ion-image" style="font-size:64px;color:#888;vertical-align:middle;"></i>
-      </div>
-      <ion-item id="routeRealTime-list-item-container6">
-        <div id="routeRealTime-markdown6" style="text-align:center;" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#000000;">
-            Some friendly
-            <strong>
-              markdown
-            </strong>
-          </p>
-          <p style="color:#000000;">
-            Lorem ipsum
-          </p>
-        </div>
+
+      <ion-item  style="background-color:#e8ebef;text-align:center;">
+        <p> Tiempo estimado Total <strong>{{option.time}}</strong> </p>
+        <p> Gasto Total <strong>{{option.money}}</strong> </p>
+      </ion-item >
+
+      <ion-item *ngIf="option.pros != undefinded && option.pros.length  > 0">
+        <ion-row><p> Que ganas ?</p></ion-row>
+        <ion-row class="pros">
+          <ion-icon *ngFor="let pro of option.pros" name="{{pro}}"></ion-icon>
+        </ion-row>
       </ion-item>
     </ion-list>
   </ion-card>
