--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -8,4 +8,42 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page4"></ion-content>
+<ion-content padding >
+
+  <div class="buttons">
+    <ion-grid>
+
+      <ion-row>
+        <button ion-button block color="light">
+          Ciclorutas y Talleres de Ciclas
+        </button>
+      </ion-row>
+
+
+      <ion-row>
+        <button ion-button block color="light">
+          Accesibilidad para discapacidad de movilidad
+        </button>
+      </ion-row>
+
+      <ion-row>
+        <button ion-button block color="light">
+          Estados del Transporte Público
+        </button>
+      </ion-row>
+
+      <ion-row>
+        <button ion-button block color="light">
+          Puntos de Rampas
+        </button>
+      </ion-row>
+
+      <ion-row>
+        <button ion-button block color="danger">
+          Emergencia
+        </button>
+      </ion-row>
+
+    </ion-grid>
+  </div>
+</ion-content>
