--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC96BZRQNxLfpgu3lmXpJMQV8TST5K3pJo"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC96BZRQNxLfpgu3lmXpJMQV8TST5K3pJo&libraries=visualization"></script>
 
 </body>
 </html>
